03-gitops/apps/01-platform/longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.k8s.ejmlab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
#  tls:
#    - hosts:
#        - longhorn.cluster
#      secretName: longhorn-ui-tls
